<resources>
    <string name="app_name">Scrup</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="createtext">Create</string>
    <string name="createtexts">Create Account</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment2">Fragment2</string>
    <string name="click_me">Click Me</string>
    <string name="tab_text_1">Welcome</string>
    <string name="tab_text_2">About</string>
    <string name="tab_text_3">Help</string>
    <string name="start">Start</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="sure_texts">Are You Sure</string>
    <string name="add_item">Add Item</string>
    <string name="save_button">Save</string>
    <string name="image_button">Image</string>
    <string name="hint_size">Item Size</string>
    <string name="hint_color">Item Color</string>
    <string name="hint_qty">Item Quantity</string>
    <string name="hint_item">Item Name</string>
    <string name="enter_item">Enter Item</string>
    <string name="update_text" />
    <string name="edit_time" />
</resources>
