<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="23dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_alert"
                android:text="@string/sure_texts"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textSize="17sp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conf_no_button"
                android:text="@string/no_text"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="40dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conf_yes_button"
                android:text="@string/yes_text"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>